--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-strip-debug": "^3.0.0",
     "run-sequence": "^2.2.1"
   }
 }
